feat: add complete task logic
